test/e2e/config/istio-cni.yaml
---
# Source: cni/templates/serviceaccount.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: istio-cni
  namespace: "networking-cni"
  labels:
    app: istio-cni
    release: networking-cni
    istio.io/rev: default
    install.operator.istio.io/owning-resource: unknown
    operator.istio.io/component: "Cni"
    app.kubernetes.io/name: istio-cni
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/instance: "networking-cni"
    app.kubernetes.io/part-of: "istio"
    app.kubernetes.io/version: "1.31.0"
    helm.sh/chart: cni-1.31.0

---
# Source: cni/templates/configmap-cni.yaml
kind: ConfigMap
apiVersion: v1
metadata:
  name: istio-cni-config
  namespace: "networking-cni"
  labels:
    app: istio-cni
    release: networking-cni
    istio.io/rev: default
    install.operator.istio.io/owning-resource: unknown
    operator.istio.io/component: "Cni"
    app.kubernetes.io/name: istio-cni
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/instance: "networking-cni"
    app.kubernetes.io/part-of: "istio"
    app.kubernetes.io/version: "1.31.0"
    helm.sh/chart: cni-1.31.0
data:
  CURRENT_AGENT_VERSION: "1.31.0"
  AMBIENT_ENABLED: "false"
  AMBIENT_ENABLEMENT_SELECTOR: "- podSelector:\n    matchLabels:\n      istio.io/dataplane-mode: ambient\n- namespaceSelector:\n    matchLabels:\n      istio.io/dataplane-mode: ambient\n  podSelector:\n    matchExpressions:\n    - key: istio.io/dataplane-mode\n      operator: NotIn\n      values:\n      - none"
  AMBIENT_DNS_CAPTURE: "true"
  AMBIENT_IPV6: "true"
  AMBIENT_RECONCILE_POD_RULES_ON_STARTUP: "true"
  ENABLE_AMBIENT_DETECTION_RETRY: "false" # K8S < 1.24 doesn't like empty values
  CNI_CONF_NAME: 10-calico.conflist # Name of the CNI config file to create. Only override if you know the exact path your CNI requires..
  ISTIO_OWNED_CNI_CONFIG: "false"
  CHAINED_CNI_PLUGIN: "true"
  EXCLUDE_NAMESPACES: "kube-system,networking-cni"
  REPAIR_ENABLED: "true"
  REPAIR_LABEL_PODS: "false"
  REPAIR_DELETE_PODS: "false"
  REPAIR_REPAIR_PODS: "true"
  REPAIR_INIT_CONTAINER_NAME: "istio-validation"
  REPAIR_BROKEN_POD_LABEL_KEY: "cni.istio.io/uninitialized"
  REPAIR_BROKEN_POD_LABEL_VALUE: "true"
  NATIVE_NFTABLES: "false"

---
# Source: cni/templates/clusterrole.yaml
# Created if cluster resources are not omitted
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: istio-cni
  labels:
    app: istio-cni
    release: networking-cni
    istio.io/rev: default
    install.operator.istio.io/owning-resource: unknown
    operator.istio.io/component: "Cni"
    app.kubernetes.io/name: istio-cni
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/instance: "networking-cni"
    app.kubernetes.io/part-of: "istio"
    app.kubernetes.io/version: "1.31.0"
    helm.sh/chart: cni-1.31.0
rules:
- apiGroups: [""]
  resources: ["pods","nodes","namespaces"]
  verbs: ["get", "list", "watch"]

---
# Source: cni/templates/clusterrole.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: istio-cni-repair-role
  labels:
    app: istio-cni
    release: networking-cni
    istio.io/rev: default
    install.operator.istio.io/owning-resource: unknown
    operator.istio.io/component: "Cni"
    app.kubernetes.io/name: istio-cni
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/instance: "networking-cni"
    app.kubernetes.io/part-of: "istio"
    app.kubernetes.io/version: "1.31.0"
    helm.sh/chart: cni-1.31.0
rules:
  - apiGroups: [""]
    resources: ["events"]
    verbs: ["create", "patch"]
  - apiGroups: [""]
    resources: ["pods"]
    verbs: ["watch", "get", "list"]

---
# Source: cni/templates/clusterrolebinding.yaml
# Created if cluster resources are not omitted
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: istio-cni
  labels:
    app: istio-cni
    release: networking-cni
    istio.io/rev: default
    install.operator.istio.io/owning-resource: unknown
    operator.istio.io/component: "Cni"
    app.kubernetes.io/name: istio-cni
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/instance: "networking-cni"
    app.kubernetes.io/part-of: "istio"
    app.kubernetes.io/version: "1.31.0"
    helm.sh/chart: cni-1.31.0
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: istio-cni
subjects:
- kind: ServiceAccount
  name: istio-cni
  namespace: "networking-cni"

---
# Source: cni/templates/clusterrolebinding.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: istio-cni-repair-rolebinding
  labels:
    k8s-app: istio-cni-repair
    release: networking-cni
    istio.io/rev: default
    install.operator.istio.io/owning-resource: unknown
    operator.istio.io/component: "Cni"
    app.kubernetes.io/name: istio-cni
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/instance: "networking-cni"
    app.kubernetes.io/part-of: "istio"
    app.kubernetes.io/version: "1.31.0"
    helm.sh/chart: cni-1.31.0
subjects:
- kind: ServiceAccount
  name: istio-cni
  namespace: "networking-cni"
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: istio-cni-repair-role

---
# Source: cni/templates/daemonset.yaml
# This manifest installs the Istio install-cni container, as well
# as the Istio CNI plugin and config on
# each master and worker node in a Kubernetes cluster.
#
# $detectedBinDir exists to support a GKE-specific platform override,
# and is deprecated in favor of using the explicit `gke` platform profile.

kind: DaemonSet
apiVersion: apps/v1
metadata:
  # Note that this is templated but evaluates to a fixed name
  # which the CNI plugin may fall back onto in some failsafe scenarios.
  # if this name is changed, CNI plugin logic that checks for this name
  # format should also be updated.
  name: istio-cni-node
  namespace: "networking-cni"
  labels:
    k8s-app: istio-cni-node
    release: networking-cni
    istio.io/rev: default
    install.operator.istio.io/owning-resource: unknown
    operator.istio.io/component: "Cni"
    app.kubernetes.io/name: istio-cni
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/instance: "networking-cni"
    app.kubernetes.io/part-of: "istio"
    app.kubernetes.io/version: "1.31.0"
    helm.sh/chart: cni-1.31.0
    
spec:
  selector:
    matchLabels:
      k8s-app: istio-cni-node
  updateStrategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        k8s-app: istio-cni-node
        sidecar.istio.io/inject: "false"
        istio.io/dataplane-mode: none
        app.kubernetes.io/name: istio-cni
        app.kubernetes.io/managed-by: "Helm"
        app.kubernetes.io/instance: "networking-cni"
        app.kubernetes.io/part-of: "istio"
        app.kubernetes.io/version: "1.31.0"
        helm.sh/chart: cni-1.31.0
        
      annotations:
        sidecar.istio.io/inject: "false"
        # Add Prometheus Scrape annotations
        prometheus.io/scrape: 'true'
        prometheus.io/port: "15014"
        prometheus.io/path: '/metrics'
        # Add AppArmor annotation
        # This is required to avoid conflicts with AppArmor profiles which block certain
        # privileged pod capabilities.
        # Required for Kubernetes 1.29 which does not support setting appArmorProfile in the
        # securityContext which is otherwise preferred.
        container.apparmor.security.beta.kubernetes.io/install-cni: unconfined
        # Custom annotations
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      # Can be configured to allow for excluding istio-cni from being scheduled on specified nodes
      tolerations:
        - effect: NoSchedule
          operator: Exists
        - key: CriticalAddonsOnly
          operator: Exists
        - effect: NoExecute
          operator: Exists
      priorityClassName: system-node-critical
      serviceAccountName: istio-cni
      # Time to allow for graceful CNI cleanup during pod termination.
      # Configurable via values.yaml to prevent race conditions during rolling updates.
      terminationGracePeriodSeconds: 30
      containers:
        # This container installs the Istio CNI binaries
        # and CNI network config file on each node.
        - name: install-cni
          image: "docker.io/istio/install-cni:1.31.0@sha256:8cef43ba08ae1af846d0e474591f625cd2dd6b2c0df0efcb17faef0d978ef246"
          ports:
          - containerPort: 15014
            name: metrics
            protocol: TCP
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8000
          securityContext:
            # This is required to avoid conflicts with AppArmor profiles which block certain
            # privileged pod capabilities.
            # For Kubernetes >= 1.30 appArmorProfile should be used, for earlier versions this is set
            # with container.apparmor.security.beta.kubernetes.io annotation
            privileged: false
            runAsGroup: 0
            runAsUser: 0
            runAsNonRoot: false
            # Both ambient and sidecar repair mode require elevated node privileges to function.
            # But we don't need _everything_ in `privileged`, so explicitly set it to false and
            # add capabilities based on feature.
            capabilities:
              drop:
              - ALL
              add:
              # CAP_NET_ADMIN is required to allow ipset and route table access
              - NET_ADMIN
              # CAP_NET_RAW is required to allow iptables mutation of the `nat` table
              - NET_RAW
              # CAP_SYS_PTRACE is required for repair and ambient mode to describe
              # the pod's network namespace.
              - SYS_PTRACE
              # CAP_SYS_ADMIN is required for both ambient and repair, in order to open
              # network namespaces in `/proc` to obtain descriptors for entering pod network
              # namespaces. There does not appear to be a more granular capability for this.
              - SYS_ADMIN
              # While we run as a 'root' (UID/GID 0), since we drop all capabilities we lose
              # the typical ability to read/write to folders owned by others.
              # This can cause problems if the hostPath mounts we use, which we require write access into,
              # are owned by non-root. DAC_OVERRIDE bypasses these and gives us write access into any folder.
              - DAC_OVERRIDE
          command: ["install-cni"]
          args:
            - --log_output_level=info
          envFrom:
            - configMapRef:
                name: istio-cni-config
          env:
            - name: REPAIR_NODE_NAME
              valueFrom:
                fieldRef:
                  fieldPath: spec.nodeName
            - name: REPAIR_RUN_AS_DAEMON
              value: "true"
            - name: REPAIR_SIDECAR_ANNOTATION
              value: "sidecar.istio.io/status"
            - name: ALLOW_SWITCH_TO_HOST_NS
              value: "true"
            - name: NODE_NAME
              valueFrom:
                fieldRef:
                  apiVersion: v1
                  fieldPath: spec.nodeName
            - name: GOMEMLIMIT
              valueFrom:
                resourceFieldRef:
                  resource: limits.memory
                  divisor: "1"
            - name: GOMAXPROCS
              valueFrom:
                resourceFieldRef:
                  resource: limits.cpu
                  divisor: "1"
            - name: POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: POD_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          volumeMounts:
            - mountPath: /host/opt/cni/bin
              name: cni-bin-dir
            - mountPath: /host/proc
              name: cni-host-procfs
              readOnly: true
            - mountPath: /host/etc/cni/net.d
              name: cni-net-dir
            - mountPath: /var/run/istio-cni
              name: cni-socket-dir
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
      volumes:
        # Used to install CNI.
        - name: cni-bin-dir
          hostPath:
            path: /opt/cni/bin
        - name: cni-host-procfs
          hostPath:
            path: /proc
            type: Directory
        - name: cni-net-dir
          hostPath:
            path: /etc/cni/net.d
        # Used for UDS sockets for logging, ambient eventing
        - name: cni-socket-dir
          hostPath:
            path: /var/run/istio-cni
        - name: cni-netns-dir
          hostPath:
            path: /var/run/netns
            type: DirectoryOrCreate # DirectoryOrCreate instead of Directory for the following reason - CNI may not bind mount this until a non-hostnetwork pod is scheduled on the node,
            # and we don't want to block CNI agent pod creation on waiting for the first non-hostnetwork pod.
            # Once the CNI does mount this, it will get populated and we're good.

---
# Source: cni/templates/zzz_profile.yaml
#  Flatten globals, if defined on a per-chart basis
