test/e2e/config/plaintext.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ${PLAIN_POD}
  namespace: networking-test
  annotations:
    sidecar.istio.io/inject: "false"
spec:
  restartPolicy: Never
  automountServiceAccountToken: false
  containers:
    - name: curl
      image: ${CURL_IMAGE}
      command: [sleep, "300"]
      resources:
        requests: {cpu: 10m, memory: 16Mi}
